[package]
name = "valhalla-s3-elevation"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "valhalla-s3-elevation"
readme = "README.md"
repository = "https://github.com/kinkard/valhalla-s3-elevation"
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
anyhow = "1"
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
glob = "0.3"
indicatif = "0.18"
mimalloc = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
